
  - twa_graph::purge_unreachable_states() now takes a function which
    is called with the new numbering of states. This is useful to
    update an external structure that references states of the twa
    that we want to purge.

  - the PSL simplification routines learned that {SERE;1} can be
    simplified to {1} or {SERE} depending on whether SERE accepts
    the empty word or not.

New in spot 2.5.2 (2018-03-25)

  Bugs fixed:

  - acc_cond::is_generalized_rabin() and
    acc_cond::is_generalized_streett() would segfault on weird
    acceptance conditions such as "3 t" or "3 f".

  - remove_fin() and streett_to_generalized_buchi() should never
    return automata with "f" acceptance.

  - "autfilt --acceptance-is=Fin-less" no longer accept automata
    with "f" acceptance.

  - twa_run methods will now diagnose cases where the cycle is
    unexpectedly empty instead of segfaulting.

  - spot::closure(), used by default for testing stutter-invariance,
    was using an optimization incorrect if the acceptance condition
    had some Fin(x).  Consequently stutter-invariance tests for
    automata, for instance with "autfilt --is-stutter-invariant",
    could be to be wrong (even if the input does not use Fin(x), its
    complement, used in the stutter-invariance test likely will).
    Stutter-invariance checks of LTL formulas are not affected.

New in spot 2.5.1 (2018-02-20)

  Library:

  - iar() and iar_maybe() now also handle Streett-like conditions.

  Bugs fixed:

  - iar() and iar_maybe() properly handle Rabin-like conditions.

  - streett_to_generalized_buchi() could produce incorrect result on
    Streett-like input with acceptance like (Inf(0)|Fin(1))&Fin(1)
    where some Fin(x) is used both with and without a paired Fin(y).

  - is_generalized_rabin() had a typo that caused some non-simplified
    acceptance conditions like Fin(0)|(Fin(0)&Inf(1)) to be
    incorrectly detecteded as generalized-Rabin 2 0 1 and then output