@@ -27,6 +27,11 @@ New in spot 2.5.2.dev (not yet released)
     simplified to {1} or {SERE} depending on whether SERE accepts
     the empty word or not.
 
+  Bugs fixed:
+
+  - "autfilt --cobuchi --small/--det" would turn a transition-based
+    co-Büchi automaton into a state-based co-Büchi.
+
 New in spot 2.5.2 (2018-03-25)
 
   Bugs fixed:
